--- a/samsung_test/samsung_test/samsung_test.vcxproj.filters
+++ b/samsung_test/samsung_test/samsung_test.vcxproj.filters
@@ -27,5 +27,14 @@
     <ClCompile Include="16236_다시풀기.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="코드트리빵.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="16236_다시풀기_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="16236_다시풀기3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
