--- a/DataStructure_Algo/DataStructure_Algo/DataStructure_Algo.vcxproj.filters
+++ b/DataStructure_Algo/DataStructure_Algo/DataStructure_Algo.vcxproj.filters
@@ -27,5 +27,14 @@
     <ClCompile Include="tree.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="hash.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="linked_list.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="tree%27.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
