기출 푸는중

--- a/samsung_test/samsung_test/samsung_test.vcxproj
+++ b/samsung_test/samsung_test/samsung_test.vcxproj
@@ -148,10 +148,16 @@
     <ClCompile Include="2022_하_코드트리빵.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="2022_하_코드트리빵2.cpp" />
+    <ClCompile Include="2022_하_코드트리빵2.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="싸움땅.cpp" />
     <ClCompile Include="코드트리빵.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="input.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
