--- a/basic-algo/basic-algo/basic-algo.vcxproj.filters
+++ b/basic-algo/basic-algo/basic-algo.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="10773.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1874_3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
