--- a/basic-algo/basic-algo/basic-algo.vcxproj.filters
+++ b/basic-algo/basic-algo/basic-algo.vcxproj.filters
@@ -13,34 +13,46 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\5_stack">
+      <UniqueIdentifier>{1da5e914-de58-4d01-8bee-219f2eb81928}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\6_queue">
+      <UniqueIdentifier>{d26b8a61-2ab5-4d5e-a274-a8557af3f3db}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2493.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="10773.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="1874_3.cpp">
-      <Filter>소스 파일</Filter>
+    <ClCompile Include="queue_stl.cpp">
+      <Filter>소스 파일\6_queue</Filter>
     </ClCompile>
     <ClCompile Include="queue_직접구현.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="queue_stl.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="10845.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\6_queue</Filter>
     </ClCompile>
     <ClCompile Include="18258.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\6_queue</Filter>
+    </ClCompile>
+    <ClCompile Include="10845.cpp">
+      <Filter>소스 파일\6_queue</Filter>
+    </ClCompile>
+    <ClCompile Include="10773.cpp">
+      <Filter>소스 파일\5_stack</Filter>
+    </ClCompile>
+    <ClCompile Include="2493.cpp">
+      <Filter>소스 파일\5_stack</Filter>
     </ClCompile>
     <ClCompile Include="2164.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\6_queue</Filter>
+    </ClCompile>
+    <ClCompile Include="1874_3.cpp">
+      <Filter>소스 파일\5_stack</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\새 폴더\Algo_cpp\basic-algo\basic-algo\1874.cpp">
+      <Filter>소스 파일\5_stack</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\새 폴더\Algo_cpp\basic-algo\basic-algo\1874_2.cpp">
+      <Filter>소스 파일\5_stack</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
