--- a/basic-algo/basic-algo/basic-algo.vcxproj.filters
+++ b/basic-algo/basic-algo/basic-algo.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="1697.cpp">
       <Filter>소스 파일\9_BFS</Filter>
     </ClCompile>
+    <ClCompile Include="1926_3.cpp">
+      <Filter>소스 파일\9_BFS</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
