--- a/basic-algo/basic-algo/basic-algo.vcxproj.filters
+++ b/basic-algo/basic-algo/basic-algo.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="4179_2.cpp">
       <Filter>소스 파일\9_BFS</Filter>
     </ClCompile>
+    <ClCompile Include="1697_2.cpp">
+      <Filter>소스 파일\9_BFS</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
